--- a/index.html
+++ b/index.html
@@ -1,101 +1,161 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <!--Bootstrap 4.0/5.0 Stylesheets-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.8/dist/css/uikit.min.css" />
-
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.8/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.8/dist/js/uikit-icons.min.js"></script>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/uikit.min.css" />
-    <script src="js/uikit.min.js"></script>
-    <script src="js/uikit-icons.min.js"></script>
-    <!--End of stylesheets-->
-    
-    <!--Internal CSS-->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>James I. Stewart - About</title>
     <style>
-      .footer {
-        background: rgb(255, 255, 255);
-        padding: 10px 0;
-      }
-      .footer a {
-        color: #70726F;
-        font-size: 20px;
-        padding: 10px;
-        border-right: 1px solid #70726F;
-        transition: all .5s ease;
-      }
-      .footer a:first-child {
-        border-left: 1px solid #70726F;
-      }
-      .footer a:hover {
-        color: white;
-      }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #e0e0e0;
+            margin: 0;
+            padding: 0;
+        }
+        header, footer {
+            background-color: #1e1e1e;
+            padding: 1em;
+            text-align: center;
+        }
+        main {
+            padding: 2em;
+        }
+        h1, h2, h3 {
+            color: #ffffff;
+        }
+        .section {
+            margin-bottom: 2em;
+        }
+        a {
+            color: #bb86fc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        nav {
+            margin-bottom: 2em;
+        }
+        nav a {
+            margin: 0 1em;
+        }
+
+
+        <!-- Photo Selector-->
+        .carousel {
+            width: 100%;
+            position: relative;
+            overflow: hidden;
+            max-height: 100vh;
+        }
+        .carousel-container {
+            display: flex;
+            transition: transform 0.5s ease;
+            min-width: 100%;
+        }
+        .carousel-item {
+            flex: 0 0 100%;
+            text-align: center;
+        }
+        .carousel-item img {
+            width: auto;
+            height: auto;
+            max-width: 100%;
+            max-height: 80vh;
+        }
+        .carousel-item p {
+            margin-top: 0.5em;
+            color: #bb86fc;
+        }
+        .carousel-button {
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+            padding: 10px 20px;
+            z-index: 100;
+        }
+        .carousel-button.left {
+            left: 10px;
+        }
+        .carousel-button.right {
+            right: 10px;
+        }
     </style>
-    <title>Home</title>
-  </head>
-  <body>
-    <!--Nav Bar-->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">J. Ian Stewart</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./hobbies.html">Hobbies</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./projects.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./resume.html">Resume</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
-      <div class="card mb-3" style="max-width: 1024px;">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="https://pbs.twimg.com/profile_images/1431275688175099910/PNTN0PaP_400x400.jpg" class="img-fluid rounded-start" alt="Photo of self">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">About Me</h5>
-              <p class="card-text">
-                My name is James Ian Stewart and I am a computer science major at the university of Colorado at boulder. 
-                I have lived in Colorado all my life and love to wake up every morning and see the Rocky mountains.
-                Ever since freshman year of High School, I have loved to code because it allows me to solve problems in creative ways.
-                I love learning new things in all the languages I code in and want to learn more languages in the future.
-                My favorite color is lime green, if you could not tell.
-              </p>
+</head>
+<body>
+    <header>
+        <h1>James I. Stewart</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+        </nav>
+    </header>
+    <main>
+        <section class="section" id="about-me">
+            <h2>About Me</h2>
+            <p>Hi, I'm James Ian Stewart, a software developer with a passion for game development and data science. When I'm not coding, you can find me hiking, biking, or exploring new trails.</p>
+        </section>
+        <section class="section" id="hobbes">
+            <h2>Hobbies</h2>
+            <p>Living in Boulder, I love going up to the mountains to get some fresh air and view the great outdoors. I try to get out every night to view the sunset and snap a photo of the crazy colors.</p>
+        </section>
+        <section class="section" id="photos">
+          <div class="carousel">
+            <div class="carousel-container">
+              <div class="carousel-item">
+                <img src="images/beachSunsetLighthouse.JPG" alt="Photo 1">
+                <p>Spring Break 2023, Tybee Island, Georgia</p>
+              </div>
+              <div class="carousel-item">
+                <img src="images/magentaClouds.jpg" alt="Photo 2">
+                <p>October Sunset, Boulder, Colorado</p>
+              </div>
+              <div class="carousel-item">
+                <img src="images/moonTelescope.jpg" alt="Photo 3">
+                <p>This was taken with my phone through a telescope. Pinewood Springs, Colorado</p>
+              </div>
+              <div class="carousel-item">
+                <img src="images/twinPeaksSunset.jpg" alt="Photo 4">
+                <p>Twin Peaks is the large mountain to the left of the sunset. Gunbarrel, Colorado</p>
+              </div>
             </div>
+            <button class="carousel-button left" onclick="moveSlide(-1)">&#10094;</button>
+            <button class="carousel-button right" onclick="moveSlide(1)">&#10095;</button>
           </div>
-        </div>
-      </div>
-
-      <!--Footer-->
-      <footer class="footer">
-        <div class="container text-center">
-          <a href="https://twitter.com/IanSinColorado"><i class="fa fa-twitter"></i></a>
+        </section>
+    </main>
+    <footer>
+      <p>Contact Me!</p>
+      <p><a href="mailto:iansincolorado@gmail.com">iansincolorado@gmail.com</a></p>
+        <nav>
+          <a href="https://github.com/IanSinColorado"><i class="fa fa-github"></i></a>
           <a href="https://www.linkedin.com/in/iansincolorado/"><i class="fa fa-linkedin"></i></a>
-        </div>
-      </footer>
-  
-  </body>
+        </nav>
+    </footer>
+    <script>
+        let currentSlide = 0;
+        const slides = document.querySelectorAll('.carousel-item');
+        const totalSlides = slides.length;
+
+        function updateSlidePosition() {
+            const carouselContainer = document.querySelector('.carousel-container');
+            carouselContainer.style.transform = 'translateX(' + (-currentSlide * 100) + '%)';
+        }
+
+        function moveSlide(direction) {
+            currentSlide += direction;
+            if (currentSlide < 0) {
+                currentSlide = totalSlides - 1;
+            } else if (currentSlide >= totalSlides) {
+                currentSlide = 0;
+            }
+            updateSlidePosition();
+        }
+    </script>
+</body>
 </html>
