--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             color: #bb86fc;
         }
         .carousel-button {
+            position: inherit;
             top: 50%;
             transform: translateY(-50%);
             background-color: #333;
@@ -107,21 +108,30 @@
         <section class="section" id="photos">
           <div class="carousel">
             <div class="carousel-container">
-              <div class="carousel-item">
-                <img src="images/beachSunsetLighthouse.JPG" alt="Photo 1">
-                <p>Spring Break 2023, Tybee Island, Georgia</p>
+              <div class="carousel-item" style="display: block">
+                <img src="images/buttonRockTop.png" alt="Photo 1">
+                <p>Button Rock Peak</p>
+                <p>Pinewood Springs, Colorado</p>
               </div>
-              <div class="carousel-item">
-                <img src="images/magentaClouds.jpg" alt="Photo 2">
-                <p>October Sunset, Boulder, Colorado</p>
+              <div class="carousel-item" style="display: none">
+                <img src="images/beachSunsetLighthouse.JPG" alt="Photo 2">
+                <p>Spring Break 2023</p>
+                <p>Tybee Island, Georgia</p>
               </div>
-              <div class="carousel-item">
-                <img src="images/moonTelescope.jpg" alt="Photo 3">
-                <p>This was taken with my phone through a telescope. Pinewood Springs, Colorado</p>
+              <div class="carousel-item" style="display: none">
+                <img src="images/magentaClouds.jpg" alt="Photo 3">
+                <p>October Sunset</p>
+                <p>Boulder, Colorado</p>
               </div>
-              <div class="carousel-item">
-                <img src="images/twinPeaksSunset.jpg" alt="Photo 4">
-                <p>Twin Peaks is the large mountain to the left of the sunset. Gunbarrel, Colorado</p>
+              <div class="carousel-item" style="display: none">
+                <img src="images/moonTelescope.jpg" alt="Photo 4">
+                <p>This was taken with my phone through a telescope.</p>
+                <p>Pinewood Springs, Colorado</p>
+              </div>
+              <div class="carousel-item" style="display: none">
+                <img src="images/twinPeaksSunset.jpg" alt="Photo 5">
+                <p>Twin Peaks is the large mountain to the left of the sunset.</p>
+                <p>Gunbarrel, Colorado</p>
               </div>
             </div>
             <button class="carousel-button left" onclick="moveSlide(-1)">&#10094;</button>
@@ -142,19 +152,20 @@
         const slides = document.querySelectorAll('.carousel-item');
         const totalSlides = slides.length;
 
-        function updateSlidePosition() {
-            const carouselContainer = document.querySelector('.carousel-container');
-            carouselContainer.style.transform = 'translateX(' + (-currentSlide * 100) + '%)';
-        }
-
         function moveSlide(direction) {
-            currentSlide += direction;
-            if (currentSlide < 0) {
+            if ((currentSlide + direction) < 0) {
+                slides[currentSlide].style.display = "none";
                 currentSlide = totalSlides - 1;
-            } else if (currentSlide >= totalSlides) {
+                slides[currentSlide].style.display = "block";
+            } else if ((currentSlide + direction) >= totalSlides) {
+                slides[currentSlide].style.display = "none";
                 currentSlide = 0;
+                slides[currentSlide].style.display = "block";
+            } else {
+                slides[currentSlide].style.display = "none";
+                currentSlide += direction;
+                slides[currentSlide].style.display = "block";
             }
-            updateSlidePosition();
         }
     </script>
 </body>
